[package]
name = "ggrs"
version = "0.5.1"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
edition = "2021"
description = "GGRS is a reimagination of GGPO, enabling P2P rollback networking in Rust. Rollback to the future!"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gschup/ggrs"
keywords = ["gamedev", "networking", "ggpo", "rollback"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
bitfield-rle = "0.2"
parking_lot = "0.11"
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
serial_test = "0.5"
piston = "0.53"
piston2d-graphics = "0.40"
pistoncore-glutin_window = "0.69"
piston2d-opengl_graphics = "0.78"
freetype-rs = "0.27"
find_folder = "0.3"
structopt = "0.3"
rapier2d = { version = "0.10", features = [ "serde-serialize", "enhanced-determinism" ] }
macroquad = "0.3.10"

# Examples
[[example]]
name = "box_game_p2p"
path = "examples/box_game/box_game_p2p.rs"

[[example]]
name = "box_game_spectator"
path = "examples/box_game/box_game_spectator.rs"

[[example]]
name = "box_game_synctest"
path = "examples/box_game/box_game_synctest.rs"

[[example]]
name = "rapier_synctest"
path = "examples/rapier/rapier_synctest.rs"

[[example]]
name = "tug-of-war"
path = "examples/tug_of_war/tug_of_war.rs"