[package]
name = "ggrs"
version = "0.7.1"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
edition = "2021"
description = "GGRS is a reimagination of GGPO, enabling P2P rollback networking in Rust. Rollback to the future!"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gschup/ggrs"
keywords = ["gamedev", "networking", "ggpo", "rollback"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
bitfield-rle = "0.2"
parking_lot = "0.11"
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
serial_test = "0.5"
structopt = "0.3"
macroquad = "0.3.10"

# Examples
[[example]]
name = "box_game_p2p"
path = "examples/box_game/box_game_p2p.rs"

[[example]]
name = "box_game_spectator"
path = "examples/box_game/box_game_spectator.rs"

[[example]]
name = "box_game_synctest"
path = "examples/box_game/box_game_synctest.rs"

[[example]]
name = "tug-of-war"
path = "examples/tug_of_war/tug_of_war.rs"