[package]
name = "ggrs"
version = "0.11.0"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
edition = "2021"
description = "GGRS is a reimagination of GGPO, enabling P2P rollback networking in Rust. Rollback to the future!"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gschup/ggrs"
keywords = ["gamedev", "networking", "ggpo", "rollback"]
categories = ["network-programming", "game-development"]

[features]
sync-send = []
wasm-bindgen = ["instant/wasm-bindgen", "getrandom/js"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
bitfield-rle = "0.2.1"
parking_lot = "0.12"
instant = "0.1"
getrandom = { version = "0.2", optional = true }
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
serial_test = "0.5"
structopt = "0.3"
macroquad = { version = "0.4", features = ["log-rs"] }
tracing-subscriber = "0.3"
tracing-log = "0.2"

# Examples
[[example]]
name = "ex_game_p2p"
path = "examples/ex_game/ex_game_p2p.rs"

[[example]]
name = "ex_game_spectator"
path = "examples/ex_game/ex_game_spectator.rs"

[[example]]
name = "ex_game_synctest"
path = "examples/ex_game/ex_game_synctest.rs"
