[package]
name = "box_example"
version = "0.1.0"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggrs = { path = "../ggrs" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
adler = "1.0.2"