[package]
name = "ggrs"
version = "0.1.0"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
edition = "2018"
description = "GGRS (good game rollback system) is a reimagination of the [GGPO network SDK](https://www.ggpo.net/)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gschup/ggrs"
homepage = "https://github.com/gschup/ggrs"
keywords = ["gamedev", "networking"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.3"
bitfield-rle = "0.2.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
adler = "1.0.2"
serial_test = "*"